documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

L13W32API VOID __stdcall L13_RAMRdsL(LPULONG valueptr,ULONG addrval,INT countval,HCARD handleval);

L13W32API VOID __stdcall L13_RAMRdsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCARD handleval);

L13W32API USHORT __stdcall L13_RAMRdW(ULONG addrval,HCARD handleval);

L13W32API VOID __stdcall L13_RAMWipe(HCARD handleval);

L13W32API VOID __stdcall L13_RAMWipeEx(USHORT value,HCARD handleval);

L13W32API VOID __stdcall L13_RAMWrB(USHORT value,ULONG addrval,HCARD handleval);

L13W32API VOID __stdcall L13_RAMWrL(ULONG value,ULONG addrval,HCARD handleval);

L13W32API VOID __stdcall L13_RAMWrsL(LPULONG valueptr,ULONG addrval,INT countval,HCARD handleval);

L13W32API VOID __stdcall L13_RAMWrsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCARD handleval);

L13W32API VOID __stdcall L13_RAMWrW(USHORT value,ULONG addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_RTConfigEx(ULONG configval,INT taval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_RTConfigExx(ULONG configval,INT taval,HCARD handleval);

L13W32API LISTADDR __stdcall L13_RTCreateListEx(ULONG listconfigval,INT skipval,INT count,ULONG msgconfigval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L13W32API LISTADDR __stdcall L13_RTCreateListExx(ULONG listconfigval,INT skipval,INT count,ULONG msgconfigval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_RTReset(INT taval,HCARD handleval);

L13W32API USHORT __stdcall L13_RTStatus(INT taval,HCARD handleval);

L13W32API USHORT __stdcall L13_RTSWDRd(INT taval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SchedBuild(INT nummsgs,LPMSGADDR msgaddr,LPINT freq,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SchedBuildEx(INT nummsgs,LPMSGADDR msgaddr,LPINT freq,LPINT period,LPVOID buf,ULONG bufsize,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SchedBuildExx(ULONG frametime,INT nummsgs,LPMSGADDR msgaddr,LPINT period,LPVOID buf,ULONG bufsize,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SchedCalc(LPMSGADDR msgaddr,HCARD handleval);

L13W32API VOID __stdcall L13_SchedDisplay(ULONG nummsgs,LPULONG count);

L13W32API VOID __stdcall L13_SchedHook(INT index,LPVOID ptr);

L13W32API ERRVAL __stdcall L13_SchedInsEnd(HCARD handleval);

L13W32API ERRVAL __stdcall L13_SchedInsMsg(ULONG index,LPMSGADDR msgaddr,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SchedInsStart(ULONG frametime,ULONG count,HCARD handleval);

L13W32API ULONG __stdcall L13_SchedMaxval(LPULONG array,ULONG arraycount);

L13W32API ULONG __stdcall L13_SchedMinval(LPULONG array,ULONG arraycount);

L13W32API ERRVAL __stdcall L13_SEEPokeW(INT value,INT numbits,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SEERdBit(LPINT valueptr,INT bitnum,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SEERdL(LPULONG valueptr,INT addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SEERdW(LPINT valueptr,INT addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SEEWrBit(INT value,INT bitnum,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SEEWrL(ULONG value,INT addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SEEWrW(INT value,INT addrval,HCARD handleval);

L13W32API USHORT __stdcall L13_SEMMRdW(ULONG addrval,HCARD handleval);

L13W32API VOID __stdcall L13_SEMMWrW(USHORT value,ULONG addrval,HCARD handleval);

L13W32API USHORT __stdcall L13_SEMRdW(ULONG addrval,HCARD handleval);

L13W32API VOID __stdcall L13_SEMWrW(USHORT value,ULONG addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SerialClear(HCARD handleval);

L13W32API ERRVAL __stdcall L13_SerialConfig(ULONG configval,USHORT count,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SerialConfigEx(ULONG configval,USHORT count,HCARD handleval);

L13W32API INT __stdcall L13_SerialStatus(HCARD handleval);

L13W32API ULONG __stdcall L13_SerialWr(LPUSHORT buf,HCARD handleval);

L13W32API ULONG __stdcall L13_Shl(ULONG dataval,USHORT cntval);

L13W32API ULONG __stdcall L13_Shr(ULONG dataval,USHORT cntval);

L13W32API VOID __stdcall L13_TimerClear(HCARD handleval);

L13W32API ULONG __stdcall L13_TimerRd(HCARD handleval);

L13W32API INT __stdcall L13_TimerResolution(INT timerresol,HCARD handleval);

L13W32API USHORT __stdcall L13_TimerResolutionEx(USHORT timershift,HCARD handleval);

L13W32API INT __stdcall L13_ValAsciiCmpi(LPSTR str1,LPSTR str2);