documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32NET.CS

        [DllImport("L13W32.DLL", EntryPoint = "_L13_RAMRdsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_RAMRdsL(ref UInt32 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RAMRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_RAMRdsW(ref UInt16 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RAMRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_RAMRdW(UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RAMWipe@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_RAMWipe(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RAMWipeEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_RAMWipeEx(UInt16 value, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RAMWrB@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_RAMWrB(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RAMWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_RAMWrL(UInt32 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RAMWrsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_RAMWrsL(ref UInt32 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RAMWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_RAMWrsW(ref UInt16 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RAMWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_RAMWrW(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RTConfigEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_RTConfigEx(UInt32 configval, Int32 taval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RTConfigExx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_RTConfigExx(UInt32 configval, Int32 taval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RTCreateListEx@36", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_RTCreateListEx(UInt32 listconfigval, Int32 skipval, Int32 count, UInt32 msgconfigval, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RTCreateListExx@36", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_RTCreateListExx(UInt32 listconfigval, Int32 skipval, Int32 count, UInt32 msgconfigval, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RTReset@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_RTReset(Int32 taval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RTStatus@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_RTStatus(Int32 taval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RTSWDRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_RTSWDRd(Int32 taval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SchedBuild@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_SchedBuild(Int32 nummsgs, ref UInt32 msgaddr, ref Int32 freq, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SchedBuildEx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_SchedBuildEx(Int32 nummsgs, ref UInt32 msgaddr, ref Int32 freq, ref Int32 period, IntPtr buf, UInt32 bufsize, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SchedBuildExx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_SchedBuildExx(UInt32 frametime, Int32 nummsgs, ref UInt32 msgaddr, ref Int32 period, IntPtr buf, UInt32 bufsize, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SchedCalc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_SchedCalc(ref UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SchedDisplay@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_SchedDisplay(UInt32 nummsgs, ref UInt32 count);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SchedHook@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_SchedHook(Int32 index, IntPtr ptr);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SchedInsEnd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_SchedInsEnd(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SchedInsMsg@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_SchedInsMsg(UInt32 index, ref UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SchedInsStart@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_SchedInsStart(UInt32 frametime, UInt32 count, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SchedMaxval@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_SchedMaxval(ref UInt32 arrayval, UInt32 arrayvalcount);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SchedMinval@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_SchedMinval(ref UInt32 arrayval, UInt32 arrayvalcount);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SEEPokeW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_SEEPokeW(Int32 value, Int32 numbits, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SEERdBit@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_SEERdBit(ref Int32 valueptr, Int32 bitnum, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SEERdL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_SEERdL(ref UInt32 valueptr, Int32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SEERdW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_SEERdW(ref Int32 valueptr, Int32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SEEWrBit@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_SEEWrBit(Int32 value, Int32 bitnum, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SEEWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_SEEWrL(UInt32 value, Int32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SEEWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_SEEWrW(Int32 value, Int32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SEMMRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_SEMMRdW(UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SEMMWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_SEMMWrW(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SEMRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_SEMRdW(UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SEMWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_SEMWrW(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SerialClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_SerialClear(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SerialConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_SerialConfig(UInt32 configval, UInt16 count, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SerialConfigEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_SerialConfigEx(UInt32 configval, UInt16 count, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SerialStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_SerialStatus(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_SerialWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_SerialWr(ref UInt16 buf, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_Shl@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_Shl(UInt32 dataval, UInt16 cntval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_Shr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_Shr(UInt32 dataval, UInt16 cntval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_TimerClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_TimerClear(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_TimerRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_TimerRd(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_TimerResolution@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_TimerResolution(Int32 timerresol, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_TimerResolutionEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_TimerResolutionEx(UInt16 timershift, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ValAsciiCmpi@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_ValAsciiCmpi(ref string str1, ref string str2);
